--- a/site.yml
+++ b/site.yml
@@ -49,22 +49,22 @@
 #  roles:
 #    - role: keystone_population
 #
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: glanceserver
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: placement
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: novaserver
+#- hosts: storage_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: glanceserver
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: placement
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: novaserver
 
 - hosts: compute_nodes
   become: true
