--- a/roles/neutronserver/tasks/main.yml
+++ b/roles/neutronserver/tasks/main.yml
@@ -3,9 +3,9 @@
   loop:
     - neutron-server
     - neutron-plugin-ml2
-    - neutron-linuxbridge-agent
-    - neutron-l3-agent
-    - neutron-dhcp-agent
+    #- neutron-linuxbridge-agent
+    #- neutron-l3-agent
+    #- neutron-dhcp-agent
     - neutron-metadata-agent
 
 - name: ensure neutron database connections is configured
@@ -167,39 +167,39 @@
     value: 1
     reload: yes
 
-- name: configure the layer 3 agent
-  ini_file:
-    path: /etc/neutron/l3_agent.ini
-    section: DEFAULT
-    option: "interface_driver"
-    value: linuxbridge
-  notify:
-  - restart neutron-services
-    
-- name: configure the DHCP agent
-  ini_file:
-    path: /etc/neutron/dhcp_agent.ini
-    section: DEFAULT
-    option: "{{ item.option }}"
-    value: "{{ item.value }}"
-  loop:
-    - { option: "interface_driver", value: linuxbridge }
-    - { option: "dhcp_driver", value: neutron.agent.linux.dhcp.Dnsmasq }
-    - { option: "enable_isolated_metadata", value: "true" }
-  notify:
-  - restart neutron-services
-
-#- name: configure the metadata agent
+#- name: configure the layer 3 agent
 #  ini_file:
-#    path: /etc/neutron/metadata_agent.ini
+#    path: /etc/neutron/l3_agent.ini
+#    section: DEFAULT
+#    option: "interface_driver"
+#    value: linuxbridge
+#  notify:
+#  - restart neutron-services
+#    
+#- name: configure the DHCP agent
+#  ini_file:
+#    path: /etc/neutron/dhcp_agent.ini
 #    section: DEFAULT
 #    option: "{{ item.option }}"
 #    value: "{{ item.value }}"
 #  loop:
-#    - { option: "nova_metadata_host", value: "{{ internal_ip }}" }
-#    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
+#    - { option: "interface_driver", value: linuxbridge }
+#    - { option: "dhcp_driver", value: neutron.agent.linux.dhcp.Dnsmasq }
+#    - { option: "enable_isolated_metadata", value: "true" }
 #  notify:
 #  - restart neutron-services
+
+- name: configure the metadata agent
+  ini_file:
+    path: /etc/neutron/metadata_agent.ini
+    section: DEFAULT
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "nova_metadata_host", value: "{{ internal_ip }}" }
+    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
+  notify:
+  - restart neutron-services
 
 - name: ensure neutron db is initialized
   command: neutron-db-manage --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/ml2_conf.ini upgrade head
