--- a/roles/neutron-agents/tasks/main.yml
+++ b/roles/neutron-agents/tasks/main.yml
@@ -13,7 +13,7 @@
     path: /etc/neutron/neutron.conf
     section: database
     option: connection
-    value: mysql+pymysql://neutron:{{ neutron_db_password }}@{{ internal_ip }}/neutron
+    value: mysql+pymysql://neutron:{{ neutron_db_password }}@{{ controller }}/neutron
   notify: 
   - restart neutron-services
 
@@ -25,7 +25,7 @@
     value: "{{ item.value }}"
   loop:
     - { option: "transport_url",
-    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ internal_ip }}:5672/'}
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ controller }}:5672/'}
     - { option: "core_plugin", value: ml2 }
     - { option: "service_plugins", value: router }
     - { option: "allow_overlapping_ips", value: "true" }
@@ -44,24 +44,24 @@
   notify:
   - restart neutron-services
 
-#- name: configure the layer 3 agent
-#  ini_file:
-#    path: /etc/neutron/l3_agent.ini
-#    section: DEFAULT
-#    option: "interface_driver"
-#    value: linuxbridge
-#  notify:
-#  - restart neutron-services
-#    
-#- name: configure the DHCP agent
-#  ini_file:
-#    path: /etc/neutron/dhcp_agent.ini
-#    section: DEFAULT
-#    option: "{{ item.option }}"
-#    value: "{{ item.value }}"
-#  loop:
-#    - { option: "interface_driver", value: linuxbridge }
-#    - { option: "dhcp_driver", value: neutron.agent.linux.dhcp.Dnsmasq }
-#    - { option: "enable_isolated_metadata", value: "true" }
-#  notify:
-#  - restart neutron-services
+- name: configure the layer 3 agent
+  ini_file:
+    path: /etc/neutron/l3_agent.ini
+    section: DEFAULT
+    option: "interface_driver"
+    value: linuxbridge
+  notify:
+  - restart neutron-services
+    
+- name: configure the DHCP agent
+  ini_file:
+    path: /etc/neutron/dhcp_agent.ini
+    section: DEFAULT
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "interface_driver", value: linuxbridge }
+    - { option: "dhcp_driver", value: neutron.agent.linux.dhcp.Dnsmasq }
+    - { option: "enable_isolated_metadata", value: "true" }
+  notify:
+  - restart neutron-services
