--- a/roles/neutron-agents/handlers/main.yml
+++ b/roles/neutron-agents/handlers/main.yml
@@ -1,4 +1,4 @@
-- name: restart neutron agents
+- name: restart neutron-agents
   service: name={{ item }} state=restarted
   with_items:
     - neutron-l3-agent
