--- a/roles/neutron-agents-compute/tasks/main.yml
+++ b/roles/neutron-agents-compute/tasks/main.yml
@@ -9,7 +9,7 @@
     value: "{{ item.value }}"
   loop:
     - { option: "transport_url",
-    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ hostvars["controller"]["internal_ip"] }}:5672/'}
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ controller }}:5672/'}
     - { option: "auth_strategy", value: keystone }
   notify: 
   - restart neutron-services
@@ -30,9 +30,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
-    - { option: "auth_url", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
-    - { option: "memcached_servers", value: '{{ hostvars["controller"]["internal_ip"] }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ controller }}:5000' }
+    - { option: "auth_url", value: 'http://{{ controller }}:5000' }
+    - { option: "memcached_servers", value: '{{ controller }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
