--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -1,6 +1,30 @@
-- name: ensure nova-compute is installed 
-  apt: name=nova-compute
-  
+- name: ensure nova packages are installed
+  apt: name={{ item }}
+  loop:
+    - nova-api
+    - nova-conductor
+    - nova-scheduler
+    - nova-novncproxy
+     
+
+- name: ensure nova_api database connections is configured
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: api_database
+    option: connection
+    value: mysql+pymysql://nova:{{ nova_db_password }}@{{ internal_ip }}/nova_api
+  notify: 
+  - restart nova-services
+
+- name: ensure nova database connections is configured
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: database
+    option: connection
+    value: mysql+pymysql://nova:{{ nova_db_password }}@{{ internal_ip }}/nova
+  notify: 
+  - restart nova-services
+
 - name: set default section options
   ini_file:
     path: /etc/nova/nova.conf
@@ -9,13 +33,12 @@
     value: "{{ item.value }}"
   loop:
     - { option: "transport_url",
-    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ controller }}:5672/'}
-    - { option: "my_ip", value: "{{ internal_ip }}" }
-  #  - { option: "use_neutron", value: true }
-  #  - { option: "firewall_driver", value: nova.virt.firewall.NoopFirewallDriver }
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ internal_ip }}:5672/'}
+    - { option: "my_ip", value: '{{ internal_ip }}' }
   notify: 
-  - restart nova-compute
+  - restart nova-services
 
+   
 - name: configure keystone_authtoken section
   ini_file:
     path: /etc/nova/nova.conf
@@ -23,9 +46,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ controller }}:5000/' }
-    - { option: "auth_url", value: 'http://{{ controller }}:5000/' }
-    - { option: "memcached_servers", value: '{{ controller }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ internal_ip }}:5000' }
+    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000' }
+    - { option: "memcached_servers", value: '{{ internal_ip }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
@@ -33,9 +56,10 @@
     - { option: "username", value: nova}
     - { option: "password", value: "{{ nova_identity_password }}" }
     - { option: "region", value: "{{ region }}" }    
-    - { option: "region_name", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }
+  #  - { option: "service_token_roles_required", value: true } # Hay que mirar esta opción, no aparece en la documentación
   notify: 
-  - restart nova-compute
+  - restart nova-services
 
 - name: ensure auth_strategy is set to keystone
   ini_file:
@@ -44,32 +68,34 @@
     option: auth_strategy
     value: keystone
   notify:
-  - restart nova-compute
+  - restart nova-services
 
-- name: configure spice section
+  # Y la sección vnc
+
+- name: configure spice section # Hay que repasarla, en la documentaciión está la vpn
   ini_file:
     path: /etc/nova/nova.conf
     section: spice
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "enabled", value: 'true' }
+    - { option: "enabled", value: true }
     - { option: "server_listen", value: '$my_ip' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
     - { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
     - { option: "html5proxy_host", value: "0.0.0.0" }
     - { option: "html5proxy_port", value: "6082" }
   notify:
-  - restart nova-compute
+  - restart nova-services
 
 - name: configure glance section
   ini_file:
     path: /etc/nova/nova.conf
     section: glance
     option: api_servers
-    value: 'http://{{ controller }}:9292'
+    value: 'http://{{ internal_ip }}:9292' # No es internal_ip, es la dirección de glance que puede estar en otro nodo
   notify:
-  - restart nova-compute
+  - restart nova-services
 
 - name: configure oslo_concurrency section
   ini_file:
@@ -78,7 +104,7 @@
     option: lock_path
     value: /var/lib/nova/tmp
   notify:
-  - restart nova-compute
+  - restart nova-services
 
 - name: configure placement section
   ini_file:
@@ -87,7 +113,7 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "auth_url", value: 'http://{{ controller }}:5000/v3' }
+    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000/v3' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
@@ -97,7 +123,7 @@
     - { option: "region", value: "{{ region }}" }    
     - { option: "region_name", value: "{{ region }}" }    
   notify: 
-  - restart nova-compute
+  - restart nova-services
 
 - name: configure neutron section
   ini_file:
@@ -106,14 +132,37 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "auth_url", value: 'http://{{ controller }}:5000' }
+    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
     - { option: "project_name", value: service}
     - { option: "username", value: neutron}
     - { option: "password", value: "{{ neutron_identity_password }}" }
-    - { option: "region", value: "{{ region }}" }
+    - { option: "region", value: "{{ region }}" }    
     - { option: "region_name", value: "{{ region }}" }
-  notify:
-  - restart nova-compute
+    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
+  notify: 
+  - restart nova-services
+
+- name: configure cinder section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: cinder
+    option: os_region_name
+    value: "{{ region }}"
+
+- name: populate nova-api db
+  command: /usr/bin/nova-manage api_db sync
+
+- name: register the cell0 db
+  command: /usr/bin/nova-manage cell_v2 map_cell0
+
+# Errors ignored for idempotency
+- name: create the cell1
+  command: /usr/bin/nova-manage cell_v2 create_cell --name=cell1
+  ignore_errors: True
+
+- name: populate nova db
+  command: /usr/bin/nova-manage db sync
+
