--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -1,30 +1,6 @@
-- name: ensure nova packages are installed
-  apt: name={{ item }}
-  loop:
-    - nova-api
-    - nova-conductor
-    - nova-scheduler
-    - nova-novncproxy
-     
-
-- name: ensure nova_api database connections is configured
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: api_database
-    option: connection
-    value: mysql+pymysql://nova:{{ nova_db_password }}@{{ internal_ip }}/nova_api
-  notify: 
-  - restart nova-services
-
-- name: ensure nova database connections is configured
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: database
-    option: connection
-    value: mysql+pymysql://nova:{{ nova_db_password }}@{{ internal_ip }}/nova
-  notify: 
-  - restart nova-services
-
+- name: ensure nova-compute is installed 
+  apt: name=nova-compute
+  
 - name: set default section options
   ini_file:
     path: /etc/nova/nova.conf
@@ -33,24 +9,12 @@
     value: "{{ item.value }}"
   loop:
     - { option: "transport_url",
-    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ internal_ip }}:5672/'}
-    - { option: "my_ip", value: '{{ internal_ip }}' }
-  notify: 
-  - restart nova-services
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ controller }}:5672/'}
+    - { option: "my_ip", value: "{{ internal_ip }}" }
 
-#- name: unset deprecated options
-#  ini_file:
-#    path: /etc/nova/nova.conf
-#    section: DEFAULT
-#    option: "{{ item.option }}"
-#    state: absent
-#  loop:
-#    - { option: "linuxnet_interface_driver" }
-#    - { option: "use_neutron" }
-#    - { option: "firewall_driver" }
-#  notify: 
-#  - restart nova-services
-    
+  notify: 
+  - restart nova-compute
+
 - name: configure keystone_authtoken section
   ini_file:
     path: /etc/nova/nova.conf
@@ -58,9 +22,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ internal_ip }}:5000' }
-    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000' }
-    - { option: "memcached_servers", value: '{{ internal_ip }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ controller }}:5000/' }
+    - { option: "auth_url", value: 'http://{{ controller }}:5000/' }
+    - { option: "memcached_servers", value: '{{ controller }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
@@ -68,10 +32,9 @@
     - { option: "username", value: nova}
     - { option: "password", value: "{{ nova_identity_password }}" }
     - { option: "region", value: "{{ region }}" }    
-    - { option: "region_name", value: "{{ region }}" }
-  #  - { option: "service_token_roles_required", value: true }
+    - { option: "region_name", value: "{{ region }}" }    
   notify: 
-  - restart nova-services
+  - restart nova-compute
 
 - name: ensure auth_strategy is set to keystone
   ini_file:
@@ -80,34 +43,32 @@
     option: auth_strategy
     value: keystone
   notify:
-  - restart nova-services
+  - restart nova-compute
 
-  # Y la sección vnc
-
-- name: configure spice section
+- name: configure spice section 3 Repasarlo para hacerlo con vpn
   ini_file:
     path: /etc/nova/nova.conf
     section: spice
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "enabled", value: true }
+    - { option: "enabled", value: 'true' }
     - { option: "server_listen", value: '$my_ip' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
     - { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
     - { option: "html5proxy_host", value: "0.0.0.0" }
     - { option: "html5proxy_port", value: "6082" }
   notify:
-  - restart nova-services
+  - restart nova-compute
 
 - name: configure glance section
   ini_file:
     path: /etc/nova/nova.conf
     section: glance
     option: api_servers
-    value: 'http://{{ internal_ip }}:9292'
+    value: 'http://{{ controller }}:9292'  # Lo mismo: será la dirección de glance
   notify:
-  - restart nova-services
+  - restart nova-compute
 
 - name: configure oslo_concurrency section
   ini_file:
@@ -116,7 +77,7 @@
     option: lock_path
     value: /var/lib/nova/tmp
   notify:
-  - restart nova-services
+  - restart nova-compute
 
 - name: configure placement section
   ini_file:
@@ -125,7 +86,7 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000/v3' }
+    - { option: "auth_url", value: 'http://{{ controller }}:5000/v3' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
@@ -135,7 +96,7 @@
     - { option: "region", value: "{{ region }}" }    
     - { option: "region_name", value: "{{ region }}" }    
   notify: 
-  - restart nova-services
+  - restart nova-compute
 
 - name: configure neutron section
   ini_file:
@@ -144,37 +105,14 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000' }
+    - { option: "auth_url", value: 'http://{{ controller }}:5000' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
     - { option: "project_name", value: service}
     - { option: "username", value: neutron}
     - { option: "password", value: "{{ neutron_identity_password }}" }
-    - { option: "region", value: "{{ region }}" }    
+    - { option: "region", value: "{{ region }}" }
     - { option: "region_name", value: "{{ region }}" }
-    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
-  notify: 
-  - restart nova-services
-
-- name: configure cinder section
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: cinder
-    option: os_region_name
-    value: "{{ region }}"
-
-- name: populate nova-api db
-  command: /usr/bin/nova-manage api_db sync
-
-- name: register the cell0 db
-  command: /usr/bin/nova-manage cell_v2 map_cell0
-
-# Errors ignored for idempotency
-- name: create the cell1
-  command: /usr/bin/nova-manage cell_v2 create_cell --name=cell1
-  ignore_errors: True
-
-- name: populate nova db
-  command: /usr/bin/nova-manage db sync
-
+  notify:
+  - restart nova-compute
