--- a/site.yml
+++ b/site.yml
@@ -79,18 +79,18 @@
 #  roles: 
 #    - role: 13_novadiscover
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 14_neutronserver
-
-
-- hosts: network_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 15_neutronnetwork
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: 14_neutronserver
+#
+#
+#- hosts: network_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: 15_neutronnetwork
 
 
 - hosts: compute_nodes
