--- a/roles/17_horizon/tasks/main.yml
+++ b/roles/17_horizon/tasks/main.yml
@@ -4,6 +4,13 @@
 - name: set openstack-dashboard-apache-ssl to be activated
   shell: echo openstack-dashboard-apache horizon/use_ssl boolean true |debconf-set-selections
 
+- name: ensure apache2 packages are installed
+  apt: name={{ item }}
+  loop:
+    - apache2
+    - libapache2-mod-wsgi-py3
+
+
 - name: ensure default virtualhost is disabled
   command: a2dissite {{ item }}
   loop:
