--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -72,19 +72,19 @@
 
   # Y la sección vnc
 
-- name: configure spice section # Hay que repasarla, en la documentaciión está la vpn
+- name: configure spice section # Hay que repasarla, en la documentación está la vpn
   ini_file:
     path: /etc/nova/nova.conf
-    section: spice
+    section: vnc
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
     - { option: "enabled", value: true }
     - { option: "server_listen", value: '$my_ip' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
-    - { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
-    - { option: "html5proxy_host", value: "0.0.0.0" }
-    - { option: "html5proxy_port", value: "6082" }
+    #- { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
+    #- { option: "html5proxy_host", value: "0.0.0.0" }
+    #- { option: "html5proxy_port", value: "6082" }
   notify:
   - restart nova-services
 
