--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -48,16 +48,16 @@
 - name: configure spice section 3 Repasarlo para hacerlo con vpn
   ini_file:
     path: /etc/nova/nova.conf
-    section: spice
+    section: vnc
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
     - { option: "enabled", value: 'true' }
-    - { option: "server_listen", value: '$my_ip' }
+    - { option: "server_listen", value: '0.0.0.0' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
     - { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
-    - { option: "html5proxy_host", value: "0.0.0.0" }
-    - { option: "html5proxy_port", value: "6082" }
+    #- { option: "html5proxy_host", value: "0.0.0.0" }
+    #- { option: "html5proxy_port", value: "6082" }
   notify:
   - restart nova-compute
 
