--- a/site.yml
+++ b/site.yml
@@ -61,17 +61,17 @@
 #  roles: 
 #    - role: 10_placement
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 11_novaserver
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 11_novaserver
 
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 12_novacompute
 #
 #- hosts: controller_nodes
 #  become: true
@@ -99,11 +99,11 @@
 #  roles:
 #    - role: 16_neutroncompute
 ##
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 17_horizon
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 17_horizon
 #
 #- hosts: controller_nodes
 #  become: true
