--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -55,7 +55,7 @@
     - { option: "enabled", value: 'true' }
     - { option: "server_listen", value: '0.0.0.0' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
-    - { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
+    - { option: "novncproxy_base_url", value: "http://{{ controller_fqdn }}:6080/vnc_auto.html" }
     #- { option: "html5proxy_host", value: "0.0.0.0" }
     #- { option: "html5proxy_port", value: "6082" }
   notify:
