--- a/roles/16_neutroncompute/tasks/main.yml
+++ b/roles/16_neutroncompute/tasks/main.yml
@@ -107,6 +107,7 @@
     - { option: "interface_driver", value: linuxbridge }
     - { option: "dhcp_driver", value: neutron.agent.linux.dhcp.Dnsmasq }
     - { option: "enable_isolated_metadata", value: "true" }
+    - { option: "force_metadata", value: "true" }
   notify:
   - restart neutron-services
 
