--- a/site.yml
+++ b/site.yml
@@ -61,17 +61,17 @@
 #  roles: 
 #    - role: 10_placement
 
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 11_novaserver
-
-- hosts: compute_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 12_novacompute
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 11_novaserver
+#
+#- hosts: compute_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 12_novacompute
 #
 #- hosts: controller_nodes
 #  become: true
@@ -93,11 +93,11 @@
 #   - role: 15_neutronnetwork
 
 
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 16_neutroncompute
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 16_neutroncompute
 ##
 #- hosts: controller_nodes
 #  become: true
