--- a/roles/16_neutroncompute/tasks/main.yml
+++ b/roles/16_neutroncompute/tasks/main.yml
@@ -138,12 +138,12 @@
 - name: set net.bridge.bridge-nf-call-iptables
   sysctl:
     name: net.bridge.bridge-nf-call-iptables
-    value: 1
+    value: '1'
     reload: yes
 
 - name: set net.bridge.bridge-nf-call-ip6tables
   sysctl:
     name: net.bridge.bridge-nf-call-ip6tables
-    value: 1
+    value: '1'
     reload: yes
 
