--- a/site.yml
+++ b/site.yml
@@ -61,36 +61,36 @@
 #  roles: 
 #    - role: 10_placement
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 11_novaserver
-#
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 13_novadiscover
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 14_neutronserver
-#
-#
-#- hosts: network_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 15_neutronnetwork
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 11_novaserver
+
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 12_novacompute
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 13_novadiscover
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 14_neutronserver
+
+
+- hosts: network_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 15_neutronnetwork
 
 
 - hosts: compute_nodes
