--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,10 @@
 ---
 #
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 01_common
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: 01_common
 #
 #- hosts: controller_nodes
 #  become: true
