--- a/site.yml
+++ b/site.yml
@@ -1,66 +1,65 @@
 ---
-#
+
 - hosts: all
   become: true
   gather_facts: no
   roles:
     - role: 01_common
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 02_dbserver
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 03_dbserver_population
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 04_rabbitserver
-#
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 05_etcd
-#
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 06_openstackclient
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 07_keystoneserver
-#     
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 08_keystone_population
-#
-#- hosts: storage_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 09_glanceserver
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 10_placement
 
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 02_dbserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 03_dbserver_population
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 04_rabbitserver
+
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 05_etcd
+
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: 06_openstackclient
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 07_keystoneserver
+     
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 08_keystone_population
+
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 09_glanceserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 10_placement
 - hosts: controller_nodes
   become: true
   gather_facts: no
@@ -98,7 +97,7 @@
   gather_facts: no
   roles:
     - role: 16_neutroncompute
-##
+
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
