--- a/site.yml
+++ b/site.yml
@@ -1,83 +1,83 @@
 ---
 
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: 01_common
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 02_dbserver
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 03_dbserver_population
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 04_rabbitserver
-
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 05_etcd
-
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: 06_openstackclient
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 07_keystoneserver
-     
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 08_keystone_population
-
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 09_glanceserver
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 10_placement
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 11_novaserver
-
-- hosts: compute_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 12_novacompute
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 13_novadiscover
-
+#- hosts: all
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 01_common
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: 02_dbserver
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: 03_dbserver_population
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: 04_rabbitserver
+#
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: 05_etcd
+#
+#- hosts: all
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 06_openstackclient
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 07_keystoneserver
+#     
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 08_keystone_population
+#
+#- hosts: storage_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 09_glanceserver
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 10_placement
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 11_novaserver
+#
+#- hosts: compute_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 12_novacompute
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 13_novadiscover
+#
 - hosts: controller_nodes
   become: true
   gather_facts: no
