--- a/site.yml
+++ b/site.yml
@@ -78,31 +78,31 @@
 #  roles: 
 #    - role: 13_novadiscover
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 14_neutronserver
-
-
-- hosts: network_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: 15_neutronnetwork
-
-
-- hosts: compute_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 16_neutroncompute
-
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles:
-#    - role: 17_horizon
+#   - role: 14_neutronserver
+#  
+#
+#- hosts: network_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: 15_neutronnetwork
+#
+#
+#- hosts: compute_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 16_neutroncompute
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 17_horizon
 #
 #- hosts: controller_nodes
 #  become: true
