--- a/ansible-hosts-proxmox.yml
+++ b/ansible-hosts-proxmox.yml
@@ -9,11 +9,11 @@ all:
           internal_ip: 192.168.121.1
     storage_nodes:
       hosts:
-        jupiter:
-          ansible_host: 192.168.121.1
+        saturno:
+          ansible_host: 192.168.121.6
           ansible_ssh_user: usuario
-          external_ip: 172.22.121.1
-          internal_ip: 192.168.121.1
+          external_ip: 172.22.121.6
+          internal_ip: 192.168.121.6
     network_nodes:
       hosts:
         corot:
