--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,10 @@
 ---
 
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: 01_common
+#- hosts: all
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 01_common
 #
 #- hosts: controller_nodes
 #  become: true
@@ -31,11 +31,11 @@
 #  roles:
 #   - role: 05_etcd
 #
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: 06_openstackclient
+#- hosts: all
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 06_openstackclient
 #
 #- hosts: controller_nodes
 #  become: true
@@ -104,11 +104,11 @@
 #  roles:
 #    - role: 17_horizon
 #
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: cinderserver
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 18_cinderserver
 #
 #- hosts: storage_nodes
 #  become: true
