--- a/site.yml
+++ b/site.yml
@@ -37,11 +37,11 @@
 #  roles:
 #    - role: 06_openstackclient
 #
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 07_keystoneserver
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 07_keystoneserver
 #     
 #- hosts: controller_nodes
 #  become: true
@@ -104,11 +104,11 @@
 #  roles:
 #    - role: 17_horizon
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 18_cinderserver
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 18_cinderserver
 #
 #- hosts: storage_nodes
 #  become: true
