--- a/site.yml
+++ b/site.yml
@@ -66,11 +66,11 @@
 #  roles: 
 #    - role: 11_novaserver
 #
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 12_novacompute
 #
 #- hosts: controller_nodes
 #  become: true
@@ -104,17 +104,17 @@
 #  roles:
 #    - role: 17_horizon
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 18_cinderserver
-
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 19_cindervolume
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 18_cinderserver
+#
+#- hosts: storage_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 19_cindervolume
 #
 ##- hosts: controller-nodes
 ##  roles:
