--- a/roles/20_heatserver/tasks/main.yml
+++ b/roles/20_heatserver/tasks/main.yml
@@ -73,3 +73,8 @@
   command: /usr/bin/heat-manage db_sync
   notify:
   - restart heat-services
+
+- name: ensure heat plugin horizon packages is installed
+  apt: name=python3-heat-dashboard
+  notify:
+  - restart apache2
